--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "hardhat": "^2.16.1"
   },
   "dependencies": {
+    "@axelar-network/axelar-local-dev": "^2.0.3",
     "@axelar-network/axelarjs-sdk": "^0.13.3",
     "dotenv": "^16.3.1"
   }
