--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
   "name": "hardhat-project",
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.1",
+    "@nomicfoundation/hardhat-ethers": "^3.0.3",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "hardhat": "^2.16.1"
+    "@nomicfoundation/hardhat-verify": "^1.0.3",
+    "@typechain/ethers-v6": "^0.4.0",
+    "@typechain/hardhat": "^8.0.0",
+    "@types/chai": "^4.3.5",
+    "@types/mocha": "^10.0.1",
+    "chai": "^4.3.7",
+    "hardhat": "^2.16.1",
+    "hardhat-gas-reporter": "^1.0.9",
+    "solidity-coverage": "^0.8.4",
+    "ts-node": "^10.9.1",
+    "typechain": "^8.2.0",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "@axelar-network/axelar-local-dev": "^2.0.3",
     "@axelar-network/axelarjs-sdk": "^0.13.3",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
     "dotenv": "^16.3.1"
   }
 }
